reemplazo de libreria nativa por implementacion de estructura de datos