@@ -1,6 +1,8 @@
 package sistemas.operativos.proyecto1;
 
+import sistemas.operativos.proyecto1.process.Process;
 import sistemas.operativos.proyecto1.process.ProcessType;
+import sistemas.operativos.proyecto1.lib.LinkedList;
 
 /**
  * Clase simulador del proyecto.
@@ -140,10 +142,19 @@ public class Simulator {
     }
     
     public void printReport() {
-        var procs = cpu.getAllProcesses();
+        LinkedList<Process> procs = cpu.getAllProcesses();
         int n = procs.size();
         if (n == 0) {
             System.out.println("No hay procesos para reportar.");
+            stats.setTotalProcesses(0);
+            stats.setCompletedProcesses(0);
+            stats.setAvgWait(0);
+            stats.setAvgResp(0);
+            stats.setAvgTurn(0);
+            stats.setUtil(0);
+            stats.setThroughput(0);
+            stats.setFairness(1.0);
+            stats.setCurrentProcess(null);
             return;
         }
 
@@ -152,7 +163,7 @@ public class Simulator {
         long sumResp = 0;
         long sumTurn = 0;
         
-        int  respCount = 0;
+        int respCount = 0;
         int turnCount = 0;
 
         // Para “equidad” (fairness), usaremos Jain sobre el tiempo de espera:
@@ -161,10 +172,12 @@ public class Simulator {
         double sumW2 = 0.0;
 
         System.out.println("\n===== REPORTE =====");
-        for (var p : procs) {
+        for (int i = 0; i < n; i++) {
+            var p = procs.get(i);
+            
             Integer start  = p.firstRun();
             Integer finish = p.finishTime();
-            long wait      = p.totalWait();                   // ya lo acumulas con onEnqueuedReady/onDispatchedToCpu
+            long wait      = p.totalWait();
             Integer arr    = p.arrival();
 
             Integer resp   = (start == null || arr == null)  ? null : (start - arr);
@@ -177,7 +190,7 @@ public class Simulator {
              if (turn != null) { sumTurn += turn; turnCount++; }
              
             sumW  += wait;
-            sumW2 += ((double)wait)*wait;
+            sumW2 += ((double) wait) * wait;
 
             System.out.printf(
                 "%s  arr=%d  start=%s  finish=%s  wait=%d  resp=%s  turn=%s  pc=%d%n",
@@ -185,22 +198,22 @@ public class Simulator {
                 String.valueOf(start), String.valueOf(finish),
                 wait,
                 String.valueOf(resp), String.valueOf(turn),
-                p.pc() // servicio efectivamente ejecutado
+                p.pc()
             );
         }
 
         // Promedios (se calculan sobre los que tienen valor)
-        double avgWait = n == 0 ? 0 : (double) sumWait / n;
-        double avgResp = n == 0 ? 0 : (double) sumResp / respCount;
-        double avgTurn = n == 0 ? 0 : (double) sumTurn / turnCount;
+        double avgWait = (n == 0) ? 0 : (double) sumWait / n;
+        double avgResp = (respCount == 0) ? 0 : (double) sumResp / respCount;
+        double avgTurn = (turnCount == 0) ? 0 : (double) sumTurn / turnCount;
 
         // Utilización de CPU
         long busy = cpu.getBusyCycles();
         long totalCycles = config.getCyclesAmount();
-        double util = totalCycles == 0 ? 0 : (100.0 * busy / totalCycles);
+        double util = (totalCycles == 0) ? 0 : (100.0 * busy / totalCycles);
 
         // Throughput = procesos completados / tiempo total simulado (en ciclos)
-        double throughput = totalCycles == 0 ? 0 : ((double) completed / totalCycles);
+        double throughput = (totalCycles == 0) ? 0 : ((double) completed / totalCycles);
 
         // Fairness (Jain) sobre los tiempos de espera
         double fairness  = (n == 0 || sumW2 == 0.0) ? 1.0 : ((sumW * sumW) / (n * sumW2));
@@ -223,13 +236,24 @@ public class Simulator {
         stats.setFairness(fairness);
         
         stats.setCurrentProcess(this.cpu.getCurrentProcess());
+        stats.setReadyQueue(this.cpu.getReadyQueue());
+        stats.setIoQueue(this.cpu.getIoQueue());
     }
     
     public void updateReport() {
-        var procs = cpu.getAllProcesses();
+        LinkedList<Process> procs = cpu.getAllProcesses();
         int n = procs.size();
         if (n == 0) {
             System.out.println("No hay procesos para reportar.");
+            stats.setTotalProcesses(0);
+            stats.setCompletedProcesses(0);
+            stats.setAvgWait(0);
+            stats.setAvgResp(0);
+            stats.setAvgTurn(0);
+            stats.setUtil(0);
+            stats.setThroughput(0);
+            stats.setFairness(1.0);
+            stats.setCurrentProcess(null);
             return;
         }
 
@@ -238,7 +262,7 @@ public class Simulator {
         long sumResp = 0;
         long sumTurn = 0;
         
-        int  respCount = 0;
+        int respCount = 0;
         int turnCount = 0;
 
         // Para “equidad” (fairness), usaremos Jain sobre el tiempo de espera:
@@ -246,10 +270,13 @@ public class Simulator {
         double sumW = 0.0;
         double sumW2 = 0.0;
 
-        for (var p : procs) {
+        System.out.println("\n===== REPORTE =====");
+        for (int i = 0; i < n; i++) {
+            var p = procs.get(i);
+            
             Integer start  = p.firstRun();
             Integer finish = p.finishTime();
-            long wait      = p.totalWait();                   // ya lo acumulas con onEnqueuedReady/onDispatchedToCpu
+            long wait      = p.totalWait();
             Integer arr    = p.arrival();
 
             Integer resp   = (start == null || arr == null)  ? null : (start - arr);
@@ -262,21 +289,30 @@ public class Simulator {
              if (turn != null) { sumTurn += turn; turnCount++; }
              
             sumW  += wait;
-            sumW2 += ((double)wait)*wait;
+            sumW2 += ((double) wait) * wait;
+
+            System.out.printf(
+                "%s  arr=%d  start=%s  finish=%s  wait=%d  resp=%s  turn=%s  pc=%d%n",
+                p.name(), arr,
+                String.valueOf(start), String.valueOf(finish),
+                wait,
+                String.valueOf(resp), String.valueOf(turn),
+                p.pc()
+            );
         }
 
         // Promedios (se calculan sobre los que tienen valor)
-        double avgWait = n == 0 ? 0 : (double) sumWait / n;
-        double avgResp = n == 0 ? 0 : (double) sumResp / respCount;
-        double avgTurn = n == 0 ? 0 : (double) sumTurn / turnCount;
+        double avgWait = (n == 0) ? 0 : (double) sumWait / n;
+        double avgResp = (respCount == 0) ? 0 : (double) sumResp / respCount;
+        double avgTurn = (turnCount == 0) ? 0 : (double) sumTurn / turnCount;
 
         // Utilización de CPU
         long busy = cpu.getBusyCycles();
         long totalCycles = config.getCyclesAmount();
-        double util = totalCycles == 0 ? 0 : (100.0 * busy / totalCycles);
+        double util = (totalCycles == 0) ? 0 : (100.0 * busy / totalCycles);
 
         // Throughput = procesos completados / tiempo total simulado (en ciclos)
-        double throughput = totalCycles == 0 ? 0 : ((double) completed / totalCycles);
+        double throughput = (totalCycles == 0) ? 0 : ((double) completed / totalCycles);
 
         // Fairness (Jain) sobre los tiempos de espera
         double fairness  = (n == 0 || sumW2 == 0.0) ? 1.0 : ((sumW * sumW) / (n * sumW2));
@@ -297,9 +333,10 @@ public class Simulator {
     
     private void dumpLogToFile() {
         try {
-            java.nio.file.Path out = java.nio.file.Path.of("events.log");
-            java.nio.file.Files.write(out, cpu.getEventLog(), java.nio.charset.StandardCharsets.UTF_8);
-            System.out.println("Log de eventos escrito en " + out.toAbsolutePath());
+            java.nio.file.Path out = java.nio.file.Paths.get("events.log");
+            String[] lines = cpu.getEventLogArray();  // ← de CPU
+            String body = String.join(System.lineSeparator(), lines);
+            java.nio.file.Files.writeString(out, body, java.nio.charset.StandardCharsets.UTF_8);
         } catch (Exception e) {
             System.err.println("No se pudo escribir events.log: " + e.getMessage());
         }
